Fixed bug #39878 (CURL doesn't compile on Sun Studio Pro).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@225850 c90b9560-bf6c-de11-be94-00142212c4b1